unity-api (7.112) UNRELEASED; urgency=medium

  * Move promptSurfaceList from MirSurfaceInterface to ApplicationInfoInterface

 -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Tue, 17 May 2016 09:54:25 -0300

unity-api (7.111+16.04.20160426.2-0ubuntu1) xenial; urgency=medium

  [ Pawel Stolowski ]
  * Added RoleSocialActions to ResultsModelInterface of scopes.
  * Added ExpandableFilterWidgetInterface.

  [ CI Train Bot ]
  * No-change rebuild.

 -- Pawel Stolowski <ci-train-bot@canonical.com>  Tue, 26 Apr 2016 15:31:50 +0000

unity-api (7.110+16.04.20160413-0ubuntu1) xenial; urgency=medium

  [ Daniel d'Andrada ]
  * MirSurfaceInterface: replace keymapLayout and keymapVariant with keymap
  * Unity.Application: Added and refactored APIs for surface-based window management

  [ CI Train Bot ]
  * No-change rebuild.

 -- Gerry Boland <ci-train-bot@canonical.com>  Wed, 13 Apr 2016 18:39:21 +0000

unity-api (7.109+16.04.20160405-0ubuntu1) xenial; urgency=medium

  [ Marcus Tomlinson ]
  * Add set*() methods to IniParser

  [ CI Train Bot ]
  * No-change rebuild.

 -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Tue, 05 Apr 2016 06:03:34 +0000

unity-api (7.108+16.04.20160322-0ubuntu1) xenial; urgency=medium

  [ Lukáš Tinkl, Michał Sawicz ]
  * Add API for setting keyboard layout+variant on a surface (LP:
    #1524400, #1491340)

  [ Nick Dedekind ]
  * Added setStage for sidestage redesign.
  * Added support for low shell chrome (LP: #1535397)

  [ Pawel Stolowski ]
  * Base interfaces for filters.
  * Interface for RangeInputFilter.
  * ValueSliderFilter interface.

 -- Michael Zanetti <michael.zanetti@canonical.com>  Tue, 22 Mar 2016 07:48:55 +0000

unity-api (7.107+16.04.20160223-0ubuntu1) xenial; urgency=medium

  * Removed PreviewStackInterface, modified ScopeInterface to return
    PreviewModelInterface on preview().
  * Interface for activationInProgress flag. (LP: #1537132)
